k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: achat
  labels:
    name: achat
    environment: production
